--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <ul class="dropdown">
                     <li><a href="../JSBASICO/index.html">JS Conceptos Basicos</a></li>
                     <li><a href="#">DOM</a></li>
-                    <li><a href="../REFJS/index.html">Referencia con JS</a></li>
+                    <li><a href="REFJS/index.html">Referencia con JS</a></li>
                     <li><a href="../STYLE/index.html">Style</a></li>
                     <li><a href="../EVENTOS/index.html">Eventos</a></li>
                     <li><a href="../IFELSE/index.html">If Else</a></li>
                     <li><a href="../VIEWPORT/index.html">Viewport</a></li>
-                    <li><a href="../MEDIA/index.html">@media</a></li>
+                    <li><a href="MEDIA/index.html">@media</a></li>
                 </ul>
             </li>
         </ul>
