--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <a href="#" class="nav-link">Temas</a>
                 <ul class="dropdown">
                     <li><a href="../JSBASICO/index.html">JS Conceptos Basicos</a></li>
-                    <li><a href="#">DOM</a></li>
+                    <li><a href="DOM/index.html">DOM</a></li>
                     <li><a href="REFJS/index.html">Referencia con JS</a></li>
-                    <li><a href="../STYLE/index.html">Style</a></li>
-                    <li><a href="../EVENTOS/index.html">Eventos</a></li>
-                    <li><a href="../IFELSE/index.html">If Else</a></li>
-                    <li><a href="../VIEWPORT/index.html">Viewport</a></li>
+                    <li><a href="STYLE/index.html">Style</a></li>
+                    <li><a href="EVENTOS/index.html">Eventos</a></li>
+                    <li><a href="IFELSE/index.html">If Else</a></li>
+                    <li><a href="VIEWPORT/index.html">Viewport</a></li>
                     <li><a href="MEDIA/index.html">@media</a></li>
                 </ul>
             </li>
